longhorn/kong/longhorn-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn.aandd.io
  namespace: longhorn-system
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    konghq.com/plugins: longhorn-auth
spec:
  ingressClassName: kong
  tls:
  - secretName: longhorn.aandd.io
    hosts:
    - longhorn.aandd.io
  rules:
  - host: longhorn.aandd.io
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
